--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <div class="tgme_page_action">
             <a
               class="tgme_action_button_new shine"
-              href="https://t.me/+2tNcH_tF4Uk5M2Qy"
+              href="https://t.me/soffikohr"
               >Join Channel</a
             >
           </div>
