--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <br />
             🚚 Допомагаємо з переїздом
             <br />
-            💼 Комфортні умови, підтримка команди з перших днів
+            💰 Шукаємо людей на стабільну роботу з доходом від 1500$
             <br />
             👥 Розглядаємо кандидатів від 15 років
           </div>
