--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <br />
             🚚 Допомагаємо з переїздом
             <br />
-            💰 Шукаємо людей на стабільну роботу з доходом від 1500$
+            💰 Стабільна робота з доходом від 1500$
             <br />
             👥 Розглядаємо кандидатів від 15 років
           </div>
